fix left right alignment

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -22,7 +22,8 @@
 }
 
 .about .link--icon {
-  margin-right: 0.8em;
+  margin-left: 0.4em;
+  margin-right: 0.4em;
 }
 
 .about .btn--outline {
